[package]
name = "SDFTools"
version = "0.1.0-rayon"
authors = ["gasperTheGhost <gasperTheGhost@users.noreply.github.com>"]
edition = "2015"

[lib]
name = "sdf"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
walkdir = "2"
indicatif = {version = ">= 0.15.0", features = ["rayon"]}
rayon = "1.5.0"