[package]
name = "SDFTools"
version = "0.1.0"
authors = ["gasperTheGhost <gasperTheGhost@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["dylib", "rlib"]
name = "sdf"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = ">= 2.27.0", features = ["yaml", "wrap_help"]}
walkdir = "2"
indicatif = {version = ">= 0.15.0", features = ["rayon"]}
rayon = "1.5.0"
prettytable-rs = "0.8.0"
zip = {version = "0.5.10", default-features = false, features = ["deflate"]}
ordered-float = ">= 2.0"